Closed Bug 1735414 Opened 4 years ago Closed 4 years ago

irc and ircs actions in about:preferences do not appear correctly when browser.download.improvements_to_download_panel is true

Categories

(Firefox :: Downloads Panel, defect)

defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox95 --- verified

People

(Reporter: kpatenio, Assigned: mtigley)

References

Details

Attachments

(2 files)

[Reproduction steps]

  1. Enable browser.download.improvements_to_download_panel in about:config
  2. Go to about:preferences
  3. See that "Always ask" does not appear for content types irc and ircs

Happens when starting a new profile, but can also happen with existing profiles. Switching pref back to false and refreshing about:preferences will show "Always ask" again as expected.

This issue can technically be easily resolved by manually setting a preferred action for either content type, but it may be worth looking into so that the actions appear as expected for new profiles/new users.

Nice find!

Based on logs, I expect this is related to the unit test failures that Molly has been looking at.

If I had to guess, the issue is that we're now (after bug 1733492) initializing alwaysAskBeforeHandling to false for new mimeinfo objects - but despite the "mime info" in the name, these also get used for protocol handler information. For protocol handlers, we should continue to default to "always ask". I guess at https://searchfox.org/mozilla-central/rev/d37daf2f82ed22b6a2a5cbbb975423825dfd69fa/uriloader/exthandler/nsMIMEInfoImpl.cpp#90 this should be conditional on aClass being eMIMEInfo. That might also fix the automated test Molly was looking at.

Assignee: nobody → mtigley
Status: NEW → ASSIGNED
Pushed by mtigley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6b14118c372d Protocol handlers should be set to always ask before handling. r=mhowell,NeilDeakin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Reproduced with Fx 95.0a1 (2021-10-10) on Windows 10.
Verified fixed with Fx 96.0a1 (2021-11-02) and Fx 95.0b1 on Windows 10, macOS 11 and Ubuntu 18.04.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: