Bug 1735414 - Protocol handlers should be set to always ask before handling. r=mhowell,NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D128495